# computePodMajorDomo

./: .gitignore  404.html  Readme.md  cpmdConfig.yaml.example  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
building/: index.html
clientApp/: package-lock.json  package.json
clientApp/cpmd/: index.js
cpmd/: Readme.md  __init__.py  cpmd.py  loadConfiguration.py  natsClient.py
cpmd/externalWebServer/: __init__.py  publish.py  webServer.py
cpmd/managers/: __init__.py  projects.py  security.py
cpmd/podWebServer/: Readme.md  __init__.py
cpmd/webServer/: Readme.md  __init__.py  projects.py  publish.py  security.py  webServer.py
dependencyAnalysis/: index.html
docs/: building.md  dependencyAnalysis.md  ui.md
docs/resources/: clientSide.md
resources/clientSide/: index.html
scripts/: devPodServer  installEditableCpmdCommand
search/: search_index.json
serverApp/cpmd/podWebServer/: __init__.py
ui/: index.html
