[project]
name = "ComputePodMajorDomo"
version = "0.0.1"
description = "A tool, used by a user, to start and monitor one or more tasks inside a federation of ComputePods."
authors = [
    {name = "Stephen Gaito", email = "stephen@perceptisys.co.uk"},
]
dependencies = [
    "ComputePodPythonUtils @ git+https://github.com/computePods/pythonUtils.git",
    "ComputePodInterfaces  @ git+https://github.com/computePods/interfaces.git",
    "fastapi",
    "hypercorn",
    "sse-starlette~=0.9",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "Apache-2.0"}

[project.urls]
homepage = "https://github.com/computePods/majorDomo"

[project.scripts]
cpmd = "cpmd:cpmd"

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
