[metadata]
name = computePodMajorDomo
version = 0.0.1
description = A tool, used by a user, to start and monitor one or more tasks inside a federation of ComputePods 
author = Stephen Gaito
author_email = stephen@perceptisys.co.uk
url = https://github.com/computePods/computePodMajorDomo

[options]
packages = cpmd
install_requires =
  cekit  >= 3.9
  click  >= 7.0
  jinja2 >= 2.10.1
  pyyaml >= 5.3.1

[options.entry_points]
console_scripts =
    cpmd = cpmd:cli
